Build system improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,18 @@ find_package(OpenDDS REQUIRED)
 find_package(Boost 1.66.0 REQUIRED COMPONENTS system REQUIRED)
 find_path(BOOST_ASIO_INCLUDE_DIRS boost/asio.hpp)
 
+if (OCTOMQ_RELEASE_COMPILATION)
+    message(STATUS "Builiding with optimization and without debug data")
+else()
+    message(STATUS "Building without optimization and with debug data")
+endif()
+
 if (OCTOMQ_ENABLE_TLS)
-    message(STATUS "Configuring TLS support")
+    message(STATUS "Building with TLS support")
     add_definitions(-DOCTOMQ_ENABLE_TLS)
     find_package(OpenSSL REQUIRED)
 else()
-    message(STATUS "TLS configuration disabled")
+    message(STATUS "Building without TLS support")
 endif()
 
 # set(OPENDDS_LIBS OpenDDS::Dcps)
