Add bridge adapter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,8 @@ set(SRC_LIST
     ${NETWORK_DIR}/network.cpp
     ${NETWORK_DIR}/adapter.cpp
     ${NETWORK_DIR}/adapter_factory.cpp
+    ${NETWORK_DIR}/bridge/adapter.cpp
+    ${THREADS_DIR}/bridge/bridge.cpp
     ${NETWORK_DIR}/mqtt/adapter.cpp
     ${THREADS_DIR}/mqtt/broker.cpp
     ${THREADS_DIR}/control.cpp
