Unacceptably big commit with bridge server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SRC_LIST
     ${NETWORK_DIR}/adapter_factory.cpp
     ${NETWORK_DIR}/bridge/adapter.cpp
     ${NETWORK_DIR}/bridge/protocol.cpp
+    ${NETWORK_DIR}/bridge/server.cpp
     ${THREADS_DIR}/bridge/bridge.cpp
     ${NETWORK_DIR}/mqtt/adapter.cpp
     ${THREADS_DIR}/mqtt/broker.cpp
