Building dridge by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(octopusmq VERSION 1.2.0 LANGUAGES CXX)
 
 option(OCTOMQ_ENABLE_TLS "Enable TLS support (OpenSSL is required)" OFF)
-option(OCTOMQ_ENABLE_OMQB "Enable built-in bridge protocol" OFF)
-option(OCTOMQ_ENABLE_DDS "Enable DDS support (OpenDDS patched for C++17 is required)" ON)
+option(OCTOMQ_ENABLE_OMQB "Enable built-in bridge protocol" ON)
+option(OCTOMQ_ENABLE_DDS "Enable DDS support (OpenDDS patched for C++17 is required)" OFF)
 option(OCTOMQ_ENABLE_MQTT_CLIENT "Enable MQTT client adapter" OFF)
 option(OCTOMQ_RELEASE_COMPILATION "Compile OctopusMQ with optimization and without debug data" OFF)
 option(OCTOMQ_USE_STATIC_LIBS "Use static linkage to Boost libraries" OFF)
