--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(octopusmq VERSION 1.2.0 LANGUAGES CXX)
 
 option(OCTOMQ_ENABLE_TLS "Enable TLS support (OpenSSL is required)" OFF)
-option(OCTOMQ_ENABLE_OMQB "Enable built-in bridge protocol" ON)
-option(OCTOMQ_ENABLE_DDS "Enable DDS support (OpenDDS patched for C++17 is required)" OFF)
-option(OCTOMQ_ENABLE_MQTT_CLIENT "Enable MQTT client adapter" OFF)
+option(OCTOMQ_ENABLE_DDS "Enable DDS support (OpenDDS patched for C++17 is required)" ON)
 option(OCTOMQ_RELEASE_COMPILATION "Compile OctopusMQ with optimization and without debug data" OFF)
 option(OCTOMQ_USE_STATIC_LIBS "Use static linkage to Boost libraries" OFF)
 
@@ -21,24 +19,10 @@ else()
     message(STATUS "Building without TLS support")
 endif()
 
-if (OCTOMQ_ENABLE_OMQB)
-    message(STATUS "Building with built-in bridge protocol support")
-    add_definitions(-DOCTOMQ_ENABLE_OMQB)
-else()
-    message(STATUS "Building without built-in bridge protocol support")
-endif()
-
 if(OCTOMQ_ENABLE_DDS)
     find_package(OpenDDS 3.14 REQUIRED)
     set(OPENDDS_CMAKE_VERBOSE ON)
     add_definitions(-DOCTOMQ_USE_DDS)
-endif()
-
-if(OCTOMQ_ENABLE_MQTT_CLIENT)
-    message(STATUS "Building with MQTT client adapter support")
-    add_definitions(-DOCTOMQ_ENABLE_MQTT_CLIENT)
-else()
-    message(STATUS "Building without MQTT client adapter support")
 endif()
 
 if(OCTOMQ_USE_STATIC_LIBS)
@@ -83,28 +67,11 @@ set(SRC_LIST
     ${SRC_DIR}/octopus_mq.cpp
 )
 
-if(OCTOMQ_ENABLE_OMQB)
-    set(SRC_LIST
-        ${SRC_LIST}
-        ${NETWORK_DIR}/bridge/adapter.cpp
-        ${NETWORK_DIR}/bridge/protocol.cpp
-        ${NETWORK_DIR}/bridge/server.cpp
-        ${THREADS_DIR}/bridge/bridge.cpp
-    )
-endif()
-
 if(OCTOMQ_ENABLE_DDS)
     set(SRC_LIST
         ${SRC_LIST}
         ${NETWORK_DIR}/dds/adapter.cpp
         ${THREADS_DIR}/dds/peer.cpp
-    )
-endif()
-
-if(OCTOMQ_ENABLE_MQTT_CLIENT)
-    set(SRC_LIST
-        ${SRC_LIST}
-        ${THREADS_DIR}/mqtt/client.cpp
     )
 endif()
 
